Add proper Tegral version to docs Fixes #38

--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -26,11 +26,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
 }
 
 .heroBanner .container h1 img {
   height: 3rem;
+  padding-right: 1rem;
+}
+
+.heroBanner .container small {
+  font-size: .3em;
+  vertical-align: bottom;
+  align-self: flex-start;
 }
 
 @media screen and (max-width: 996px) {
