docs: recipes and better homepage

--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -5,7 +5,6 @@
 
 .heroBanner {
   padding: 4rem 0;
-  text-align: center;
   position: relative;
   overflow: hidden;
   display: flex;
@@ -14,11 +13,14 @@
   background-position: center;
 }
 
-.heroBanner .container {
+.heroBanner .introContainer {
+  display: flex;
+  justify-items: center;
+  flex-direction: column;
   background-color: rgba(255, 255, 255, 0.4);
   backdrop-filter: blur(10px);
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  align-self: stretch;
+  padding: 2rem;
   color: black;
 }
 
@@ -26,6 +28,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.heroBanner .container p {
+  text-align: center;
 }
 
 .heroBanner .container h1 img {
@@ -50,4 +56,24 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.vertContainer {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.codeBlockContainer {
+  flex-grow: 1;
+}
+
+.codeBlockContainer > div {
+  margin: 0;
+}
+
+.introContainer {
+  justify-content: center;
+  padding: 12px;
+  max-width: 50%;
 }
