--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -27,6 +27,7 @@
 
 .heroBanner .container h1 {
   display: flex;
+  gap: 0;
   justify-content: center;
   align-items: center;
 }
@@ -77,4 +78,77 @@
   justify-content: center;
   padding: 12px;
   max-width: 50%;
+}
+
+.libs {
+  margin: 64px;
+}
+
+.libs h2 .cardTitle {
+  font-size: 36px;
+}
+
+.libsExplainer {
+  font-size: 20px;
+  color: var(--ifm-font-color-secondary);
+}
+
+.libsCard {
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.libsCard:nth-child(even) {
+  align-self: flex-end;
+}
+
+.cardContent {
+  flex-grow: 1;
+}
+
+.cardContent h3 {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  font-size: 24px;
+}
+
+.cardContent h3 :global(.badge) {
+  font-size: 12px;
+}
+
+.cardExample {
+  justify-content: stretch;
+  align-self: stretch;
+  max-width: 60%;
+  min-width: 45%;
+}
+
+.cardExample > div {
+  margin-bottom: 0;
+}
+
+.cardExample pre {
+  height: 100%;
+}
+
+.cardLinks {
+  width: 100%;
+  display: flex;
+  justify-content: end;
+  gap: 12px;
+}
+
+.cardsContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  gap: 24px;
+}
+
+.cardContent > div {
+  margin-left: 12px;
+  margin-right: 12px;
 }
