docs: make homepage more responsive, fix links and tagline

--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -94,14 +94,9 @@
 }
 
 .libsCard {
-  width: 80%;
   display: flex;
   flex-direction: row;
   align-items: center;
-}
-
-.libsCard:nth-child(even) {
-  align-self: flex-end;
 }
 
 .cardContent {
@@ -122,8 +117,6 @@
 .cardExample {
   justify-content: stretch;
   align-self: stretch;
-  max-width: 60%;
-  min-width: 45%;
 }
 
 .cardExample > div {
@@ -138,6 +131,7 @@
   width: 100%;
   display: flex;
   justify-content: end;
+  flex-wrap: wrap;
   gap: 12px;
 }
 
@@ -148,7 +142,59 @@
   gap: 24px;
 }
 
-.cardContent > div {
-  margin-left: 12px;
-  margin-right: 12px;
+
+@media (min-width: 996px) {
+  .cardExample {
+    max-width: 60%;
+    min-width: 45%;
+  }
+
+  .libsCard {
+    width: 80%;
+  }
+
+  .libsCard:nth-child(even) {
+    align-self: flex-end;
+  }
+
+  .cardContent > div {
+    margin-left: 12px;
+    margin-right: 12px;
+  }
+}
+
+@media (min-width: 800px) and (max-width: 996px) {
+  .cardExample {
+    width: 50%;
+    min-width: 50%;
+  }
+
+  .cardContent > div {
+    margin-left: 12px;
+    margin-right: 12px;
+  }
+}
+
+@media (max-width: 800px) {
+  .libsCard {
+    flex-direction: column;
+  }
+
+  .vertContainer {
+    flex-direction: column;
+  }
+
+  .introContainer {
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 500px) {
+  .heroBanner {
+    padding: 0.5rem;
+  }
+
+  .libs {
+    margin: 1.5rem;
+  }
 }
